modules update name

--- a/client/src/app/components/hero/hero.component.html
+++ b/client/src/app/components/hero/hero.component.html
@@ -1,7 +1,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-3">User Registry Service</h1>
+        <h1 class="display-3">University D Service</h1>
         <p>
             this application is in the development
             phase so you can present problems, if you want to preorder a
