--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-    <a class="navbar-brand" routerLink="/">{{app_name}}</a>
+    <a class="navbar-brand" routerLink="/"> University D</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavbar"
         aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="mainNavbar">
         <app-alerts></app-alerts>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item" >
+            <li class="nav-item">
                 <a class="nav-link" routerLink="/user/categoria">
                     Categoria
                 </a>
@@ -24,7 +24,12 @@
                     Curso
                 </a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/user/estudiante">
+                    Estudiante
+                </a>
+            </li>
+            
         </ul>
     </div>
 </nav>
