--- a/client/src/app/components/estudiante/estudiante.component.html
+++ b/client/src/app/components/estudiante/estudiante.component.html
@@ -55,7 +55,7 @@
 
 
                                         <button type="submit" [disabled]="formRegister.form.invalid"
-                                            class="btn btn-lg btn-primary btn-block mt-2">Register User</button>
+                                            class="btn btn-lg btn-primary btn-block mt-2">Crear Estudiante</button>
 
 
                                     </div>
