--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -24,12 +24,19 @@
                     Curso
                 </a>
             </li>
+            
             <li class="nav-item">
                 <a class="nav-link" routerLink="/user/estudiante">
                     Estudiante
                 </a>
             </li>
-            
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/user/estudiantecurso">
+                    Asignar Curso
+                </a>
+            </li>
+
         </ul>
     </div>
 </nav>
